--- a/Estructura/primerapagina.html
+++ b/Estructura/primerapagina.html
@@ -1,28 +1,27 @@
-Ejemplo con comentarios de codificación: 
-<!DOCTYPE html> // toda etiqueta de HTML tiene una apertura….
-<html lang="es"> // indica el idioma en el que está la página. 
+<!DOCTYPE html> <!--toda etiqueta de HTML tiene una apertura….--> 
+<html lang="es"> <!--indica el idioma en el que está la página. --> 
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mi primer proyecto WEB</title>
+<title>SUCATO TRADINGS</title>
 
 </head>
 <body>
 	<header>
-<h1>Mi Primer Proyecto Web</h1>
+<h1>SUCATO TRADINGS</h1>
 
 </header>
 <br>
 <hr>
 <img src=”” alt=””>
 
-<nav> //Para menús de navegación 
+<nav>  <!-- menús de navegación-->
 <a href=”#”>Inicio</a>
 <a href=”#”>Menú</a>
 <a href=”#”>Contacto</a>
 </nav>
 
-<main> //etiqueta semántica 
+<main> <!-- semántica -->
 <p>Todo lo relacionado con nuestro contenido principal</p>
 </main>
 
@@ -43,4 +42,4 @@ Ejemplo con comentarios de codificación:
 <p> Pie de página</p>
 
 </body>
-</html> //y un cierre. 
+</html> 
