Creando cambios en los estilos y agregando imagen de la empresa.

--- a/Estructura/primerapagina.html
+++ b/Estructura/primerapagina.html
@@ -19,6 +19,7 @@
 <a href=”#”>Inicio</a>
 <a href=”#”>Menú</a>
 <a href=”#”>Contacto</a>
+<link rel="stylesheet" href="../Estilos/primerapag.css">
 </nav>
 
 <main> <!-- semántica -->
