Agregando imagen a la página y haciendo algunos cambios en css

--- a/Estructura/primerapagina.html
+++ b/Estructura/primerapagina.html
@@ -3,23 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../Estilos/primerapag.css">
 <title>SUCATO TRADINGS</title>
 
 </head>
 <body>
 	<header>
-<h1>SUCATO TRADINGS</h1>
+<h1>BE FRUT</h1>
 
 </header>
 <br>
 <hr>
-<img src=”” alt=””>
+<img src='../Imagenes/LOGOBE.jpg' class="estilo1">
 
 <nav>  <!-- menús de navegación-->
 <a href=”#”>Inicio</a>
 <a href=”#”>Menú</a>
 <a href=”#”>Contacto</a>
-<link rel="stylesheet" href="../Estilos/primerapag.css">
+
 </nav>
 
 <main> <!-- semántica -->
@@ -27,7 +28,7 @@
 </main>
 
 <section>
-<p>Sección de página</> 
+<p>Sección de página</p> 
 </section> 
 <article>
 <p>Article</p>
@@ -40,7 +41,7 @@
 </div>
 
 <footer>
-<p> Pie de página</p>
+<h2>Sucato Tradings</h2>
 
 </body>
 </html> 
