Haciendo pruebas para conectar con la base de datos, trabajando en el footer.

--- a/Estructura/primerapagina.html
+++ b/Estructura/primerapagina.html
@@ -18,8 +18,7 @@
 
 <nav>  <!-- menús de navegación-->
 <a href=”#”>Inicio</a>
-<a href=”#”>Menú</a>
-<a href=”#”>Contacto</a>
+<a href="menu.html">Menú</a>
 
 </nav>
 
