Funcionalidad añadir producto al carrito. Modificación vista producto detalle.

--- a/productos.html
+++ b/productos.html
@@ -40,15 +40,17 @@
 
     <!-- Productos -->
     <main class="pt-4">
-        <div class="productos-titulo">
-            <h2>Nuestros Productos</h2>
-            <p>Snacks saludables a base de frutas y vegetales 100% naturales</p>
-        </div>
-
-        <div id="productos" class="container">
-            <div class="row">
+        <form method="POST">
+            <div id="contenedor-principal" class="productos-titulo">
+                <h2>Nuestros Productos</h2>
+                <p>Snacks saludables a base de frutas y vegetales 100% naturales</p>
             </div>
-        </div>    
+
+            <div id="productos" class="container">
+                <div class="row">
+                </div>
+            </div>
+        </form>    
     </main>
     
     <!-- Footer -->
