--- a/productos.html
+++ b/productos.html
@@ -10,6 +10,7 @@
     <script src="js/jquery-3.7.1.js"></script>
     <script src="js/jquery-ui-1.13.2/jquery-ui.js"></script>
     <link rel="stylesheet" href="js/jquery-ui-1.13.2/jquery-ui.css">
+    <link rel="stylesheet" href="Estilos/producto.css">
     <script src="js/productos.js"></script>
 </head>
 <body>
@@ -26,9 +27,7 @@
                         <li class="nav-item bg-warning rounded mx-4"> 
                             <a class="nav-link text-white p-2 text-uppercase" href="productos.html">Productos</a>
                         </li>
-                        <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="contacto.html">Contacto</a>
-                        </li>
+                        
                         <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="quienes_somos.html">Quiénes Somos</a>
                         </li>
@@ -37,6 +36,25 @@
             </div>
         </nav>
     </header>
+   
+    <div class="pic-ctn">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="https://picsum.photos/200/300?t=2" alt="" class="pic">
+        <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
+        <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
+        <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+      </div>
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Productos -->
     <main class="pt-4">
