Agreando imagenes a la página productos y haciendo ajuste en css para la mejora en la visualización

--- a/productos.html
+++ b/productos.html
@@ -39,10 +39,21 @@
    
     <div class="pic-ctn">
         <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
-        <img src="https://picsum.photos/200/300?t=2" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
-        <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+        <img src="Imagenes/chocolate-piña.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Mango.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/meriendasaludable1.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/mix frutas.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/piña empacada.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Chocolate-banano.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/piña.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/Tropical-mixto.jpg" alt="" class="pic estiloimagen">
+        <img src="Imagenes/productos varios.jpg" alt="" class="pic estiloimagen">
       </div>
 
 
