--- a/contacto.html
+++ b/contacto.html
@@ -1,1 +1,86 @@
-contacto
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto - SUCATO TRADINGS</title>
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
+</head>
+<body>
+    <!-- Header -->
+    <header class="header py-2">
+        <!-- Código del header -->
+        <!-- Header -->
+    <header class="header py-2">
+        <nav class="navbar">
+            <div class="container d-flex flex-column">
+                <div class="d-flex justify-content-center align-items-center">
+                    <a href="index.html">
+                        <img class="navbar-brand" src='imagenes/LOGOBE.jpg' alt="Logo de la Empresa">
+                    </a>
+                    <h1>BY SUCATO TRADINGS CR</h1>
+                </div>
+                <div class="mt-3">
+                    <ul class="navbar-nav d-flex flex-row justify-content-center">
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    </header>
+
+    <main>
+        <section class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Misión</h2>
+                        <p>Desarrollar snacks saludables, a base de frutas, de manera 100% natural, generando experiencias de consumo originales, innovadoras y dinámicas para el mercado nacional e internacional.</p>
+
+                        <h2 class="mt-4">Propuesta de Valor</h2>
+                        <ul>
+                            <li>Comodidad</li>
+                            <li>Saludable</li>
+                            <li>Práctico</li>
+                            <li>Accesible</li>
+                            <li>Precio justo</li>
+                            <li>Personalización</li>
+                            <li>Variedad</li>
+                            <li>Constante Innovación</li>
+                            <li>Versatilidad</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Información de Contacto</h2>
+                        <p>
+                            BEFRUT SNACKS<br>
+                            KAROL HIDALGO CORRALES<br>
+                            KHIDALGO@SUCATOPINEAPPLE.COM<br>
+                            506 2280-5057 / 506 6042-0654<br>
+                            www.SUCATOPINEAPPLE.COM<br>
+                            www.befrut.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <iframe class="footer" src="footer.html" frameborder="0"></iframe>
+    </footer>
+</body>
+</html>
+```
+
