--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
     <!-- Header -->
     <header class="header py-2">
         <nav class="navbar">
-            <div class="container d-flex flex-column ">
+            <div class="container d-flex flex-column">
                 <div class="d-flex justify-content-center align-items-center">
-                    <a href="index.html"> <img class="navbar-brand" src='imagenes/LOGOBE.jpg'> </a>
-                    <h1 >BY SUCATO TRADINGS CR </h1>
+                    <a href="index.html">
+                        <img class="navbar-brand" src='imagenes/LOGOBE.jpg' alt="Logo de la Empresa">
+                    </a>
+                    <h1>BY SUCATO TRADINGS CR</h1>
                 </div>
                 <div class="mt-3">
-                    <ul class="navbar-nav d-flex flex-row">
-                        <li class="nav-item bg-warning rounded mx-4"> 
+                    <ul class="navbar-nav d-flex flex-row justify-content-center">
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="productos.html">Productos</a>
                         </li>
                         <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="quienes_somos.html">Quiénes Somos</a>
                         </li>
                     </ul>
                 </div>
@@ -34,9 +36,28 @@
         </nav>
     </header>
 
-    <footer>
-        <!-- <img src='imagenes/LOGOSU.jpg' class="imagen-footer"> -->
-    </footer>
+    <!-- Contenido principal -->
+    <main>
+        <section class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Bienvenidos a SUCATO TRADINGS</h2>
+                        <p>Somos una empresa líder en la distribución de productos de alta calidad. Contamos con un amplio catálogo de productos para satisfacer todas tus necesidades.</p>
+                        <a href="productos.html" class="btn btn-primary">Ver Productos</a>
+                    </div>
+                    <div class="col-md-6">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-</body> 
+    <!-- Footer -->
+    <footer>
+        <iframe class="footer" src="footer.html" frameborder="0"></iframe>
+    </footer>
+</body>
 </html>
+
+
