--- a/productos.html
+++ b/productos.html
@@ -16,26 +16,32 @@
 </head>
 <body>
     <!-- Header -->
+    <!-- Header -->
     <header class="header py-2">
         <nav class="navbar">
-            <div class="container d-flex flex-column ">
+            <div class="container d-flex flex-column">
                 <div class="d-flex justify-content-center align-items-center">
-                    <a href="index.html"> <img class="navbar-brand" src='imagenes/LOGOBE.jpg'> </a>
-                    <h1 >BY SUCATO TRADINGS CR </h1>
+                    <a href="index.html">
+                        <img class="navbar-brand" src='imagenes/LOGOBE.jpg' alt="Logo de la Empresa">
+                    </a>
+                    <h1>BY SUCATO TRADINGS CR</h1>
                 </div>
                 <div class="mt-3">
-                    <ul class="navbar-nav d-flex flex-row">
-                        <li class="nav-item bg-warning rounded mx-4"> 
+                    <ul class="navbar-nav d-flex flex-row justify-content-center">
+                        <li class="nav-item bg-warning rounded mx-4">
+                            <a class="nav-link text-white p-2 text-uppercase" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item bg-warning rounded mx-4">
                             <a class="nav-link text-white p-2 text-uppercase" href="productos.html">Productos</a>
                         </li>
-                        
                         <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="quienes_somos.html">Quiénes Somos</a>
+                            <a class="nav-link text-white p-2 text-uppercase" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+    </header>
     </header>
    
     <div class="pic-ctn">
@@ -74,7 +80,7 @@
             <div class="d-flex justify-content-between">
                 <div id="contenedor-principal" class="productos-titulo col-md-6">
                     <h2>Nuestros Productos</h2>
-                    <p>Snacks saludables a base de frutas y vegetales 100% naturales</p>
+                    <p>Snacks saludables a base de frutas</p>
                 </div>
                 <div class="d-flex align-items-center justify-content-center col-md-2">
                     <a href="/Sucato/productosAdmin.html" class="button bg-dark rounded text-light d-inline-flex align-items-center justify-content-center p-2 text-decoration-none">
