--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto - SUCATO TRADINGS</title>
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="estilos/responsive.css">
 </head>
 <body>
     <!-- Header -->
