--- a/productos.html
+++ b/productos.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="Estilos/producto.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="js/productos.js"></script>
+    <link rel="stylesheet" href="estilos/estilos.css">
+     <link rel="stylesheet" href="estilos/responsive.css">
 </head>
 <body>
     <!-- Header -->
