Creando el archivo footer para controlar desde acá la visualización del mismo en todas las demás páginas; aún no se muestra de manera correcta en las páginas.

--- a/productos.html
+++ b/productos.html
@@ -99,8 +99,8 @@
     </main>
     
     <!-- Footer -->
-    <footer class="footer">
-        <!--<img src='imagenes/LOGOSU.jpg' class="imagen-footer"> -->
+    <footer>
+        <iframe class="footer" src="footer.html" frameborder="0"></iframe>
     </footer>
 </body>
 </html>
