--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-    <footer class="bg-dark text-white py-4">
+    <footer class="bg-dark text-white py-4 testFooter" >
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
