--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
                         <h2>Bienvenidos a SUCATO TRADINGS</h2>
                         <p>Somos una empresa líder en la distribución de productos de alta calidad. Contamos con un amplio catálogo de productos para satisfacer todas tus necesidades.</p>
                         <a href="productos.html" class="btn btn-primary">Ver Productos</a>
+
+                        <form id="reporteForm">
+                            <button class="btn btn-primary" type="button" id="generarReporte">Generar reporte de inventario</button>
+                        </form>
+                       
+                        <script>
+                            document.querySelector("#generarReporte").addEventListener("click", function(event) {
+                                event.preventDefault();
+                                var xhr = new XMLHttpRequest();
+                                xhr.onreadystatechange = function() {
+                                    if (xhr.readyState === XMLHttpRequest.DONE) {
+                                        if (xhr.status === 200) {
+                                            alert(xhr.responseText);
+                                        } else {
+                                            alert("Error al generar el reporte de inventario.");
+                                        }
+                                    }
+                                };
+                                xhr.open("POST", "reporteInventario.php", true);
+                                xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+                                xhr.send();
+                            });
+                        </script>
+
+
+
                     </div>
                     <div class="col-md-6">
                     </div>
