Cambio de html a php
Cambio de html a php. Ajustes código.

--- a/index.html
+++ b/index.html
@@ -1,42 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUCATO TRADINGS</title>
-    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/responsive.css">
-</head>
-<body>
-    <!-- Header -->
-    <header class="header py-2">
-        <nav class="navbar">
-            <div class="container d-flex flex-column">
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="index.html">
-                        <img class="navbar-brand" src='imagenes/LOGOBE.jpg' alt="Logo de la Empresa">
-                    </a>
-                    <h1>BY SUCATO TRADINGS CR</h1>
-                </div>
-                <div class="mt-3">
-                    <ul class="navbar-nav d-flex flex-row justify-content-center">
-                        <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item bg-warning rounded mx-4">
-                            <a class="nav-link text-white p-2 text-uppercase" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
+<header>
+    <iframe class="header" src="templates/header.html" width="600" height="400" frameborder="0"></iframe>
+</header>
     <!-- Contenido principal -->
     <main>
         <section class="py-5">
@@ -82,7 +46,7 @@
 
     <!-- Footer -->
     <footer>
-        <iframe class="footer" src="footer.html" frameborder="0"></iframe>
+        <iframe class="footer" src="templates/footer.html" frameborder="0"></iframe>
     </footer>
 </body>
 </html>
